2007-03-15  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Unexpanded table interface view.
	* src/lib/accerciser/accerciser.py: Changes due to changed
	settings scheme.
	* src/lib/accerciser/plugin_manager.py: Added hardcoded default 
	settings.
	* src/lib/accerciser/tools.py: Changed persisted settings scheme
	to an INI format file (~/.accerciser/accerciser.conf).
	
2007-03-14  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade:
	* plugins/event_monitor.py: Added mousover feedback and keyboard
	control to hyperlinks in the event monitor (bug 417526).

2007-03-14  Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py:
	* plugins/event_monitor.py:
	* src/lib/accerciser/accessible_treeview.py:
	* src/lib/accerciser/tools.py: Made more resilient to dead 
	corba objects.
	* src/accerciser.glade:
	* src/lib/accerciser/accerciser.py: Fixed accelerator issues 
	(bug 412509).

2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade:
	* plugins/interface_view.py: Added Table interface viewer (bug 416188).
	
2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: When tabbing to lower panels,
	vieport is scrolled if needed (bug 416189).
	* src/lib/accerciser/plugin.py: Removed shadow on plugin_area frame.
	
2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py:
	* src/lib/accerciser/plugin_manager.py: Added accelerators for
	quick plugin tab switching (bug 417424).

2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Added mnemonics to expanders 
	(bug 417421).

2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.py: Fixed a syntax error.

2007-03-12  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.py: Added links in event logs to show
	accessible in tree (bug 417526).
	
2007-03-12  Peter Parente  <parente@cs.unc.edu>
