@@ -1,5 +1,14 @@
 2007-03-15  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/interface_view.py: Removed debug prints.
+	* plugins/ipython_view.py: Removed debug prints.
+	* src/lib/accerciser/accerciser.py: Added program version to
+	'about' dialog.
+	* src/lib/accerciser/plugin.py: Removed debug prints.
+	* src/lib/accerciser/tools.py: Removed debug prints.
+
+2007-03-15  Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/interface_view.glade: Unexpanded table interface view.
 	* src/lib/accerciser/accerciser.py: Changes due to changed
 	settings scheme.
